# changple

./: .cursorrules.template  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  README_DEPLOY.md  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  deploy.sh  deploy_fix.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  opc_fix_static.sh  requirements.txt  temp_notation.py  temp_print.py  temp_reset_keywords.py  to_do.txt
chatbot/: admin.py  models.py  tasks.py
config/: base.toml  context_processors.py  dev.toml  prod.toml  settings.py  settings_production.py  urls.py
content_uploader/: admin.py  apps.py  models.py  urls.py  views.py
nginx/: Dockerfile  nginx.conf
notifications/: README.md  admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
scraper/: README.md  admin.py  models.py  (+2 more)
services/agent/: .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
services/agent/src/: __init__.py  config.py  main.py
services/agent/src/api/: __init__.py  chat.py  dependencies.py  health.py  router.py  websocket.py
services/agent/src/graph/: __init__.py  builder.py  checkpointer.py  memory.py  nodes.py  prompts.py  state.py
services/agent/src/schemas/: __init__.py  chat.py
services/agent/src/services/: __init__.py  core_client.py  redis.py  vectorstore.py
services/core/: .env.example  Dockerfile  Dockerfile.beat  Dockerfile.celery  entrypoint-beat.sh  entrypoint-celery.sh  entrypoint.sh  manage.py  pyproject.toml
services/core/src/: __init__.py
services/core/src/_changple/: celery.py  urls.py  wsgi.py
services/core/src/_changple/settings/: __init__.py  base.py  development.py  production.py
services/core/src/chat/: __init__.py  admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py
services/core/src/chat/migrations/: 0001_initial.py  0002_initial.py
services/core/src/common/: models.py  pagination.py
services/core/src/content/: __init__.py  admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py  utils.py
services/core/src/content/migrations/: 0001_initial.py  0002_initial.py
services/core/src/scraper/: __init__.py  admin.py  api_views.py  apps.py  models.py  serializers.py  tasks.py  urls.py
services/core/src/scraper/ingest/: batch_embed.py  batch_summarize.py  content_evaluator.py  ingest.py
services/core/src/scraper/management/commands/: import_chunked_data.py
services/core/src/scraper/migrations/: 0001_initial.py
services/core/src/scraper/pipeline/: __init__.py  base.py  orchestrator.py
services/core/src/scraper/pipeline/embed/: __init__.py  openai.py  pinecone.py
services/core/src/scraper/pipeline/process/: __init__.py  evaluate.py  summarize.py
services/core/src/scraper/pipeline/scrape/: __init__.py  naver_cafe.py
services/core/src/users/: __init__.py  admin.py  api_views.py  apps.py  auth_views.py  middleware.py  models.py  pipeline.py  serializers.py  urls.py  urls_auth.py
services/core/src/users/migrations/: 0001_initial.py
services/core/tests/: conftest.py  test_api.py
(+250 files in other folders)
