[project]
name = "changple-agent"
version = "3.0.0"
description = "Changple AI Agent Service - LangGraph RAG Chatbot"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",

    # LangChain / LangGraph (January 2026 latest)
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.3",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",

    # Vector DB (renamed from pinecone-client, requires Python 3.10+)
    "pinecone>=8.0.0",

    # Database (LangGraph checkpoint only)
    "psycopg[binary]>=3.3.2",
    "psycopg-pool>=3.2.6",

    # Redis
    "redis>=5.2.1",

    # HTTP client for Core APIs
    "httpx>=0.28.0",

    # Settings
    "pydantic-settings>=2.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
